Fix proper size and gaps of div elements

--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,18 @@ body {
     border-style: solid;
     border-color:black;
     width: 960px;
+    height:960px;
     flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    gap: none;
     aspect-ratio: 1 / 1;
 }
 
 .newDiv {
+    margin: none;
     background-color: black;
-    width: 6%;
-    height: 0;
-    padding-bottom: 6%
+    /* width: 6%; */
+    aspect-ratio: 1/1;
+    /* padding-bottom: 6% */
 }
